<resources>
    <string name="withdrawal_text">회원탈퇴</string>
    <string name="delete_review_content">나의 평가와 리뷰가 모두 사라져요</string>
    <string name="withdrawal_content">회원탈퇴 시 평가 기록, 리뷰 기록 등 계정과 관련된 정보는\n복구할 수 없습니다.</string>
    <string name="agree_withdrawal">위의 내용을 숙지했으며 탈퇴에 동의합니다.</string>
    <string name="use">계속 사용하기</string>
    <string name="un_use">회원 탈퇴하기</string>
    <string name="fail_withdrawal">회원탈퇴에 실패했습니다.</string>
    <string name="count">%d개</string>
</resources>